Re-added padding between title and files in "Useful forms and Documents"
This was necessary since the ul was removed

--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -3335,11 +3335,17 @@ body.site-name-finance-and-operations {
   }
 }
 
-.site-name-tax-office .useful-forms-documents{
-  .block-title {
+.site-name-tax-office .region-two-66-33-second .useful-forms-documents {
+  
+  .pane-title {
     font-size: 1.2em;
+    margin-bottom:4px;
+
   }
-  ul {
+  
+  .block-content p {
+    
     padding-top: 12px;
+
   }
 }
