--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -32,7 +32,7 @@ $legacy-support-for-ie7: true;
 @import 'compass/utilities/general/clearfix';  // Better than Drupal's clearfix.
 @import 'compass/utilities/sprites';           // See http://compass-style.org/help/tutorials/spriting/
 @import 'compass/css3';                        // Use one CSS3 mixin instead of multiple vendor prefixes.
-
+@import 'breakpoint';						   // Use Breakpoint media queries
 
 //
 // Import custom partial - mixins and variables defined for your theme
