--- a/css/responsive.smartphone.landscape.css
+++ b/css/responsive.smartphone.landscape.css
@@ -1,1 +1,1 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);html{font-size:112.5%}#nav-wrapper{display:none}.front #breadcrumb-wrapper .container{display:none}#block-print-block-print-block{width:152px}
+@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);html{font-size:112.5%}#block-print-block-print-block{width:152px}
