--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -794,6 +794,7 @@ ul.links {
     @include border-radius(6px);
 	  border-style:solid;
 	  border-width: 6px 1px 1px;
+    padding: 0;
 
     li.last.menu-depth-1 {
       margin-bottom: 20px;
