--- a/sass/global.styles.scss
+++ b/sass/global.styles.scss
@@ -2693,6 +2693,7 @@ tr.error {
  * Flexslider
  */
 .flexslider {
+  background: #f5f5f5;
   border: 15px solid #F5F5F5;
   @include border-radius(6px);
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
