--- a/css/lt-ie9.css
+++ b/css/lt-ie9.css
@@ -1,1 +1,1 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);html{font-size:81.3%}
+@import url(https://fonts.googleapis.com/css?family=Lato:300,400,700);html{font-size:81.3%}
