--- a/css/responsive.custom.css
+++ b/css/responsive.custom.css
@@ -1,1 +1,1 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);@media only screen and (max-width: 480px){.region[class*="float-blocks"] .block{float:none;width:100%}}
+@import url(https://fonts.googleapis.com/css?family=Lato:300,400,700);@media only screen and (max-width: 480px){.region[class*="float-blocks"] .block{float:none;width:100%}}
