--- a/css/responsive.smartphone.portrait.css
+++ b/css/responsive.smartphone.portrait.css
@@ -1,1 +1,1 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);html{font-size:112.5%}#block-print-block-print-block{width:152px}
+@import url(https://fonts.googleapis.com/css?family=Lato:300,400,700);html{font-size:112.5%}#block-print-block-print-block{width:152px}
