--- a/sass/_custom.scss
+++ b/sass/_custom.scss
@@ -48,7 +48,7 @@ $primary_task_active: $page;
 //
 // Font imports
 //
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
+@import url(https://fonts.googleapis.com/css?family=Lato:300,400,700);
 
 
 //
